# VulkanEngine

./: .clang-format  .clang-fromat  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Doxyfile
.cache/clangd/index/: SDL.c.27CF15A5A8B81684.idx  SDL.c.DBD16121BE44D96D.idx  SDL_RLEaccel.c.C0C10B36A7A1FA07.idx  SDL_RLEaccel.c.C3208E37745863A1.idx  SDL_RLEaccel_c.h.78778310A77AA11C.idx  SDL_RLEaccel_c.h.EEAC895BA5C806C3.idx  SDL_assert.c.C9AD97F2F1C49A79.idx  SDL_assert.c.D6C73C85E4F96578.idx  SDL_assert_c.h.4F14DDE61407C371.idx  SDL_assert_c.h.5682D1932939D216.idx  SDL_atomic.c.4AE89E731D98A2DA.idx  SDL_atomic.c.95BAA522DC582593.idx  SDL_audio.c.017ED2C56066AE43.idx  SDL_audio.c.DDB6B0DB7EDCD5A8.idx  SDL_audio_c.h.8F11288824F66B6F.idx  SDL_audio_c.h.CE1FC7E91092B379.idx  SDL_audio_channel_converters.h.016F3C02A26F52F8.idx  SDL_audio_channel_converters.h.3B62EC146C5974EC.idx  SDL_audio_resampler_filter.h.049812E07557B7C1.idx  SDL_audio_resampler_filter.h.2C192FF775C53D6D.idx  SDL_audiocvt.c.9D02A04DD047ABA1.idx  SDL_audiocvt.c.F6DB7C052FA55B33.idx  SDL_audiodev.c.4C0CB121EB1DC467.idx  SDL_audiodev.c.77776F3B201A04B6.idx  SDL_audiodev_c.h.9F73107967EA60E2.idx  SDL_audiodev_c.h.CE803890D98A78E7.idx  SDL_audiotypecvt.c.9A8D28ED462D0737.idx  SDL_audiotypecvt.c.DDFC5396936CFF3B.idx  SDL_blendfillrect.c.4C5DE3212D43E198.idx  SDL_blendfillrect.c.825FCF8E07735E81.idx  SDL_blendfillrect.h.410EB1E45D33224A.idx  SDL_blendfillrect.h.46D7362DCE28073E.idx  SDL_blendline.c.9AB363E7DCC18A03.idx  SDL_blendline.c.A79E9CD4A036964A.idx  SDL_blendline.h.68490161190D0F3E.idx  SDL_blendline.h.CFDE6FE27F46BD32.idx  SDL_blendpoint.c.473DD7DF7C94D31A.idx  SDL_blendpoint.c.FAA64E8B2E47D787.idx  SDL_blendpoint.h.0963EE78724FDCC1.idx  SDL_blendpoint.h.B9697E115263D8AE.idx  (+1046 more)
assets/: arrow.glb  desert.glb
assets/gizmo/: license.txt  scene.gltf
assets/scene/: untitled.blend  untitled.blend1
assets/sponza/: sponza.gltf
assets/sponza/textures_bc7/: Image_0.bc7  Image_1.bc7  Image_10.bc7  Image_11.bc7  Image_12.bc7  Image_13.bc7  Image_14.bc7  Image_15.bc7  Image_16.bc7  Image_17.bc7  Image_18.bc7  Image_19.bc7  Image_2.bc7  Image_20.bc7  Image_21.bc7  Image_22.bc7  Image_23.bc7  Image_24.bc7  Image_25.bc7  Image_26.bc7  Image_27.bc7  Image_28.bc7  Image_29.bc7  Image_3.bc7  Image_30.bc7  Image_31.bc7  Image_32.bc7  Image_33.bc7  Image_34.bc7  Image_35.bc7  Image_36.bc7  Image_37.bc7  Image_38.bc7  Image_39.bc7  Image_4.bc7  Image_40.bc7  Image_41.bc7  Image_43.bc7  Image_45.bc7  Image_46.bc7  (+25 more)
shaders/: bindless.glsl  blur.comp  blur.comp.spv  brdf.comp  brdf.comp.spv  colored_triangle.vert  debug.frag  equirectangular_map.comp  equirectangular_map.comp.spv  equirectangular_to_cubemap.frag  equirectangular_to_cubemap.frag.spv  equirectangular_to_cubemap.vert  equirectangular_to_cubemap.vert.spv  fullscreen_tri.vert  fullscreen_tri.vert.spv  gbuffer.frag  gbuffer.frag.spv  gbuffer.vert  gbuffer.vert.spv  gizmo.frag  gizmo.vert  gizmo.vert.spv  glsl_shader.frag.u32  ibl.frag  ibl.frag.spv  ibl.vert  ibl.vert.spv  igbuffer.frag  igbuffer.vert  imgui.frag  imgui.frag.spv  imgui.vert  imgui.vert.spv  imgui_push_constants.glsl  input_structures.glsl  irradiance.comp  irradiance.comp.spv  materials.glsl  mesh.frag  mesh.frag.spv  (+27 more)
shaders/gbuffer/: gbuffer.frag  gbuffer.vert  igbuffer.frag  igbuffer.vert  indirect.glsl
src/: .clang-fromat  CMakeLists.txt  camera.cpp  camera.h  main.cpp  pch.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
src/camera/: camera.cpp  camera.h
src/engine/: debug.h  gizmo.cpp  gizmo.h  input.cpp  input.h  loader.cpp  loader.h  scene.cpp  scene.h  tl_engine.cpp  tl_engine.h
src/graphics/: bindless.cpp  bindless.h  descriptors.cpp  descriptors.h  draw_command.cpp  draw_command.h  gbuffer.h  gfx_device.cpp  gfx_device.h  gpu_image.cpp  gpu_image.h  ibl.cpp  ibl.h  image_codex.cpp  image_codex.h  lifetime_tracker.cpp  lifetime_tracker.h  light.cpp  light.h  material_codex.cpp  material_codex.h  mesh_codex.cpp  mesh_codex.h  pipeline.cpp  pipeline_codex.cpp  pipeline_codex.h  r_resources.cpp  r_resources.h  shader_storage.cpp  shader_storage.h  swapchain.cpp  swapchain.h  tl_renderer.cpp  tl_renderer.h  tl_vkcontext.cpp  tl_vkcontext.h
src/graphics/pipelines/: compute_pipeline.cpp  compute_pipeline.h  gbuffer_pipeline.cpp  gbuffer_pipeline.h  ibl_pipeline.cpp  ibl_pipeline.h  imgui_pipeline.cpp  imgui_pipeline.h  mesh_pipeline.cpp  mesh_pipeline.h  pbr_pipeline.cpp  pbr_pipeline.h  pipeline.h  shadowmap.cpp  shadowmap.h  skybox_pipeline.cpp  skybox_pipeline.h  wireframe_pipeline.cpp  wireframe_pipeline.h
src/graphics/resources/: r_buffer.cpp  r_buffer.h  r_image.cpp  r_image.h  r_pipeline.cpp  r_pipeline.h  r_resources.cpp  r_resources.h  tl_buffer.cpp  tl_buffer.h  tl_pipeline.cpp  tl_pipeline.h
src/graphics/utils/: vk_initializers.cpp  vk_initializers.h  vk_pipelines.cpp  vk_pipelines.h
src/math/: transform.cpp  transform.h
src/utils/: ImGuiProfilerRenderer.h  ProfilerTask.h  circular_buffer.h  imgui_console.h  profiler.cpp  profiler.h  utils.h  workers.cpp  workers.h
src/world/: tl_components.cpp  tl_components.h  tl_entity.cpp  tl_entity.h  tl_scene.cpp  tl_scene.h
